# dask-hpcconfig

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: public.yml  publish.yml
ci/: docs.yaml  env.yaml
dask_hpcconfig/: __init__.py  __main__.py  cli.py  clusters.py  clusters.yaml  definitions.py  processors.py  types.py
docs/: conf.py  index.rst  requirements.txt
docs/getting-started/: datarmor.ipynb  installing.rst  quickstart.rst
docs/reference/: api.rst  cli.rst
docs/tutorials/: datarmor.ipynb
docs/user-guide/: cli.rst  programmatic.rst
notebooks/: mynotebook.ipynb
