[metadata]
name = dask-hpcconfig
author_email = justus.magin@ifremer.fr
license = MIT
description = Configuration for various dask clusters
long_description=file: README.md
long_description_content_type=text/markdown
url = https://github.com/umr-lops/dask-hpcconfig
project_urls =
    Documentation=https://dask-hpcconfig.readthedocs.io

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pyyaml
    dask-jobqueue

[options.entry_points]
console_scripts =
    dask-hpcconfig=dask_hpcconfig.cli:app

[options.package_data]
dask_hpcconfig =
    clusters.yaml

[flake8]
ignore =
    # E203: whitespace before ':' - doesn't work well with black
    # E402: module level import not at top of file
    # E501: line too long - let black worry about that
    # E731: do not assign a lambda expression, use a def
    # W503: line break before binary operator
    E203, E402, E501, E731, W503
exclude =
    .eggs
