[metadata]
name = dask-hpcconfig
author_email = justus.magin@ifremer.fr
license = MIT
description = Configuration for various dask clusters
long_description=file: README.md
long_description_content_type=text/markdown
url = https://github.com/umr-lops/dask-hpcconfig
project_urls =
    Documentation=https://dask-hpcconfig.readthedocs.io

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pyyaml
    dask >=2022.11.0
    distributed >=2022.11.0

[options.entry_points]
console_scripts =
    dask-hpcconfig=dask_hpcconfig.cli:app

[options.extras_require]
jobqueue =
    dask-jobqueue >=0.8

[options.package_data]
dask_hpcconfig =
    clusters.yaml
